--- a/style.css
+++ b/style.css
@@ -30,26 +30,32 @@ h1{
     flex-wrap: wrap;
     margin: auto;
     height: 100%;
-    overflow-y:scroll ; 
+    overflow-y:auto ; 
 }
 
 .input-card{
     display: grid;
-    
     grid-template-columns: 1fr;
     grid-template-rows: 15% auto 15%;
     gap: 5px;
     box-sizing: border-box;
- 
-    resize: none;
+    padding: 5px;
+    
 }
 .input-card img{
     color: white;
     margin-left: auto;
     width: 20px;
-
-    
+ 
 }
+.input-card > input{
+ padding: 5px;
+ border-top: 0px ;
+ border-right: 0px;
+ border-left: 0px;
+}
+
+
 
 .textarea{
     resize: none;
@@ -66,9 +72,26 @@ button{
 }
 
 
-.card,.input-card{
+.input-card{
     
     width: 200px;
+    height: 100px;
+    font-size: 10px;
+    border: 0.1px solid black;
+    border-radius: 5px;
+    padding: 5px;
+    margin: 5px;
+    box-sizing: border-box;
+    box-shadow: 0px 0px 5px black;   
+
+}
+
+
+
+.card{
+    
+    width: 200px;
+    height: 100px;
     font-size: 10px;
     border: 0.1px solid black;
     border-radius: 5px;
@@ -76,7 +99,9 @@ button{
     margin: 5px;
     box-sizing: border-box;
     box-shadow: 0px 0px 5px black;
-    height: min-content;
+    overflow-y: auto;
+
+    
 
 }
 
@@ -87,6 +112,26 @@ button{
     display: flex;
     justify-content: center;
     align-items: center;
-    
+  
+}
+
+@media screen and (max-width: 596px){
+    body{
+        width: 100%;
+    }
+    .main {
+        width: 95vw;
+        display: inline-flex;
+        flex-wrap: wrap;
+        margin: auto;
+        height: 100%;
+        
+        justify-content: center !important;
+    }
+    h1{
+        text-align: center !important;
+        font-size: 3rem;
+    }
+   
     
 }
